--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^3.5.0",
     "eslint-config-standard": "^6.0.1",
     "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-standard": "^2.0.0"
+    "eslint-plugin-standard": "^2.0.0",
+    "gulp": "^3.9.1"
   }
 }
