--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-standard": "^6.0.1",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "webpack": "^1.13.2"
   }
 }
