--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Leeje408/Node#readme",
   "dependencies": {
+    "hiredis": "^0.5.0",
     "formidable": "^1.0.17"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-standard": "^2.0.0",
     "gulp": "^3.9.1",
     "mysql": "^2.11.1",
+    "redis": "^2.6.2",
     "webpack": "^1.13.2"
   }
 }
